--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,13 @@
         "node_modules/bga-cards/src/stocks/card-stock.ts",
         "node_modules/bga-cards/src/stocks/deck.ts",
         "node_modules/bga-cards/src/stocks/line-stock.ts",
+        "node_modules/bga-cards/src/stocks/slot-stock.ts",
         "node_modules/bga-cards/src/stocks/void-stock.ts",
         "node_modules/bga-cards/src/card-manager.ts",
         "node_modules/bga-cards/src/sort.ts",
         "src/pixies.d.ts",
         "src/cards.ts",
-        "src/stacks.ts",
+        "src/table-center.ts",
         "src/player-table.ts",
         "src/pixies.ts",
         "src/define.ts"
