--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bga-animations": "thoun/bga-animations#1.1.1",
     "bga-cards": "thoun/bga-cards#3.1.2",
+    "bga-help": "thoun/bga-help#1.0.0",
     "bga-zoom": "thoun/bga-zoom#1.0.2"
   },
   "devDependencies": {
