--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "src/framework.d.ts",
         "src/counter.d.ts",
         "node_modules/bga-zoom/src/zoom-manager.ts",
+        "node_modules/bga-help/src/help-manager.ts",
         "node_modules/bga-animations/src/framework.d.ts",
         "node_modules/bga-animations/src/animations.ts",
         "node_modules/bga-animations/src/animations/attach-with-animation.ts",
