--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "bga-animations": "thoun/bga-animations#1.1.1",
     "bga-cards": "thoun/bga-cards#3.1.5",
-    "bga-help": "thoun/bga-help#1.0.0",
-    "bga-zoom": "thoun/bga-zoom#1.0.4"
+    "bga-help": "thoun/bga-help#1.0.0"
   },
   "devDependencies": {
     "sass": "^1.71.0",
